# openimagegenius

./: .gitignore  LICENSE  README.md
administration/: send_mail.py
database/: .gitignore  package.json  serverless.yml
frontend/: deploy-dev.sh  deploy-prod.sh  package-lock.json  package.json  serverless.yml
frontend/landing-page/: index.html
frontend/prod-website/: index.html
frontend/web-app/: .gitignore  package-lock.json  package.json
frontend/website/: index.html
gpu-code/: dedicated_client.py  gpu_node_lib  main.py  requirements.txt  shared_client.py
gpu-node-lib/: config.py  dataclasses.py  job_handler.py  logger.py  stable_diffusion.py  websockets.py
openimage_backend_lib/: .gitignore  LICENSE  README.md  authorizer.py  authorizer_helper.py  database_models.py  date_helper.py  pyproject.toml  rate_limiter.py  repository.py  request_helper.py  request_models.py  telegram.py  test_upstash_redis_client.py  upstash_redis_client.py
openimage_backend_lib/src/openimage_backend_lib/: authorizer.py  database_models.py  helper.py  repository.py  telegram.py
serverless/: .gitignore  package-lock.json  package.json  serverless-compose.yml
serverless/auth/: authorizer.py  handler.py  package-lock.json  package.json  requirements.txt  serverless.yml  test_authorizer.py
serverless/database/: package-lock.json  package.json  serverless.yml
serverless/image-bucket/: serverless.yaml
serverless/openimage-auth-lambda/: .gitignore  authorizer.py  package-lock.json  redirect.py  requirements.txt  serverless.yml
serverless/openimage-lambda/: authorizer.py  (+3 more)
(+71 files in other folders)
